[gd_scene load_steps=2 format=3 uid="uid://i6hclmd74t8l"]

[ext_resource type="Script" uid="uid://ctwm7cj341bh7" path="res://scripts/settingtransitions/SettingsMenu.gd" id="1_yelko"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yelko")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="LabelAudio" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelVolume" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.8

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelVideo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Video"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelResolution" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBoxFullscreen" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelGameplay" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Gameplay"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelDifficulty" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty"

[node name="DifficultyOption" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonBack" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"